<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo_large" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/title_app_name"
            android:textColor="@color/black_3c3c3c"
            android:textSize="@dimen/textSize26" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/hint_app_name"
            android:textColor="@color/gray_848a8f"
            android:textSize="@dimen/textSize16" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bottom_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="85dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_checked_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_checked_no_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/agree_agreement"
            android:textColor="@color/gray_848a8f"
            android:textSize="@dimen/textSize14" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="230dp"
        android:layout_height="38dp"
        android:layout_above="@+id/ll_bottom_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_corner_38dp_blue"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize16" />

</RelativeLayout>