<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingRight="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_f4f7ff"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingTop="22dp"
        android:paddingRight="25dp"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_call"
            android:textColor="@color/blue_3f74fd"
            android:textSize="@dimen/textSize14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/follow_up_records"
                android:textColor="@color/black_3c3c3c"
                android:textSize="@dimen/textSize14" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_remark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:singleLine="true"
            android:textColor="@color/gray_5b5e64"
            android:textSize="@dimen/textSize14"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="@string/operator"
                android:textColor="@color/black_3c3c3c"
                android:textSize="@dimen/textSize14" />

            <TextView
                android:id="@+id/tv_operator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/gray_5b5e64"
                android:textSize="@dimen/textSize14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/call_type"
                android:textColor="@color/black_3c3c3c"
                android:textSize="@dimen/textSize14" />

            <TextView
                android:id="@+id/tv_call_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/gray_5b5e64"
                android:textSize="@dimen/textSize14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/operating_time"
                android:textColor="@color/black_3c3c3c"
                android:textSize="@dimen/textSize14" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/gray_5b5e64"
                android:textSize="@dimen/textSize14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/voice_recording"
                android:textColor="@color/black_3c3c3c"
                android:textSize="@dimen/textSize14" />

            <com.yidiantong.widget.AudioPlayerView
                android:id="@+id/aplv_sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_corner_4dp_white_with_gray_line"
                android:drawableRight="@drawable/ic_recording_gray"
                android:drawablePadding="6dp"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingTop="2dp"
                android:paddingRight="8dp"
                android:paddingBottom="2dp"
                android:textSize="@dimen/textSize12"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <View style="@style/lineStyleHorizontal" />

    <View
        android:id="@+id/footer_padding"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/blue_f4f7ff"
        android:visibility="gone" />
</LinearLayout>
